<?xml version="1.0"?>
<package format="3">
  <name>landing_zone_detector</name>
  <version>0.0.1</version>
  <description>Landing zone detection from point cloud</description>
  <maintainer email="lvbnhbq@example.com">lvbnhbq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
